# DisplaySwapper

./: CMakeLists.txt  include.cpp  include.h  main.cpp
Manager/: LinuxManager.cpp  LinuxManager.h  WinManager.cpp  WinManager.h
